--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -29,13 +29,13 @@
                         <label for="" class="name">Trần Thùy Linh</label>
                     </div>
                     <div class="box-center-img">
-                        <img src="./thiep/anh/DSC_2061.webp" alt="" class="img-center">
+                        <img src="./thiep/anh/DSC_2141.webp" alt="" class="img-center">
                         <img src="./thiep/anh/pic4-05.webp" alt="" class="img-hy">
                     </div>
                     <div class="box-center">
                         <div class="box-center1">
                             <p class="kinhmoi">TRÂN TRỌNG KÍNH MỜI ANH/CHỊ/BẠN
-                                ĐẾN DỰ BỮA TIỆC BÁO HỶ THÂN MẬT CỦA <strong>HUY VÀ LINH</strong></p>
+                                ĐẾN DỰ BỮA TIỆC TÂN HÔN CỦA <strong>HUY VÀ LINH</strong></p>
                         </div>
                         <div class="box-center2">
                             <label for="" class="nhahang">TẠI NHÀ HÀNG</label>
@@ -122,7 +122,7 @@
             </div>
             <div class="box-content">
                 <p class="content" >Và hơn tất cả, Quốc Huy và Thùy Linh sẽ rất hạnh phúc 
-                    khi nhận được những món quà ý nghĩa của cô chú và anh chị thay cho hiện kim. <br>
+                    khi nhận được những lời chúc mừng.<br>
                     Rất mong chờ sự hiện diện của cô chú và anh chị vào ngày 27.10.2024 tại nhà hàng Louis Center , 38 Lâm Văn Bền, Lâm Thuận Tây, Q.7, HCM.</p>
                 <img src="./thiep/anh/pic12-13.webp" alt="" class="img11" >
             </div>
