--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -42,7 +42,7 @@
                             <label for="" class="ten">Louis Center</label>
                             <label for="" class="nhahang">Sảnh Diamond | 38 Lâm Văn Bền, Lâm Thuận Tây, Q.7, HCM</label>
                         </div>
-                        <a href="https://maps.app.goo.gl/YQ9JNiKrfPWxqzdJ8" class="map-btn" >MAPS (CLICK HERE)</a>
+                        <a href="https://maps.app.goo.gl/YQ9JNiKrfPWxqzdJ8" class="map-btn" >BẢN ĐỒ (Nhấn vào đây)</a>
                         <div class="box-time">
                             <img src="./thiep/anh/pic6-02.png" alt="" class="pic6">
                             <div class="img-timeline">
