--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -123,7 +123,7 @@
             <div class="box-content">
                 <p class="content" >Và hơn tất cả, Quốc Huy và Thùy Linh sẽ rất hạnh phúc 
                     khi nhận được những lời chúc mừng.<br>
-                    Rất mong chờ sự hiện diện của cô chú và anh chị vào ngày 27.10.2024 tại nhà hàng Louis Center , 38 Lâm Văn Bền, 38 Lâm Văn Bền, Tân Thuận Tây, Q.7, HCM.</p>
+                    Rất mong chờ sự hiện diện của cô chú và anh chị vào ngày 27.10.2024 tại nhà hàng Louis Center , 38 Lâm Văn Bền, Tân Thuận Tây, Q.7, HCM.</p>
                 <img src="./thiep/anh/pic12-13.webp" alt="" class="img11" >
             </div>
             <div class="box-end" >
