--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -40,7 +40,7 @@
                         <div class="box-center2">
                             <label for="" class="nhahang">TẠI NHÀ HÀNG</label>
                             <label for="" class="ten">Louis Center</label>
-                            <label for="" class="nhahang">Sảnh Diamond | 38 Lâm Văn Bền, Lâm Thuận Tây, Q.7, HCM</label>
+                            <label for="" class="nhahang">Sảnh Diamond | 38 Lâm Văn Bền, Tân Thuận Tây, Q.7, HCM</label>
                         </div>
                         <a href="https://maps.app.goo.gl/YQ9JNiKrfPWxqzdJ8" class="map-btn" >BẢN ĐỒ (Nhấn vào đây)</a>
                         <div class="box-time">
